[JENKINS 00007]: using java 17 features